# django-celery-progress

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
demo/: celery.py  settings.py
demoapp/: actions.py  admin.py
demoapp/templates/demo/: change_list.html
django_celery_progress/: admin.py  apps.py  models.py  progress.py  tasks.py  utils.py  views.py
django_celery_progress/migrations/: 0001_initial.py
django_celery_progress/templates/django_celery_progress/: change_list.html
