[metadata]
name = django-celery-progress
version = 1.0.1
description = A django app to monitor celery tasks with progress in admin
long_description = file: README.md
long_description_content_type=text/markdown
url = https://github.com/sandbox-pokhara/django-celery-progress.git
author = Pradish Bijukchhe
author_email = pradishbijukchhe@gmail.com
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.1
    celery
    redis